cabal-version:      3.0
name:               emm
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Teague Hansen
maintainer:         thanse23@asu.edu
build-type:         Simple

common warnings
    ghc-options: -Wall

library
  import:          warnings
  hs-source-dirs:  src
  exposed-modules: Expr,
                   Parsers
  build-depends:   base ^>=4.17.2.1,
                   containers

executable emm
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  other-modules:    Repl
  build-depends:    base ^>=4.17.2.1,
                    containers,
                    emm

test-suite emm-test
  import:         warnings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:  base,
                  hspec,
                  hspec-discover,
                  emm
  ghc-options:
    -O -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
    hspec-discover:hspec-discover
